# AlphaAnalysisEngine

./: .gitignore  CMakeLists.txt  README.md  corr.py  example.json  inspect.json
src/: alpha.h  alpha_params.h  alpha_registry.cpp  alpha_registry.h  config.cpp  config.h  csv_buf.h  csv_sink.h  delay_buffer.h  feed.h  inspect.h  instrument.h  main.cpp  market_event.h  order_book.h  output_sink.h  run.cpp  run.h  sampler.h  trade.h  types.h
src/alphas/: fair_price.cpp  imbalance_alpha.cpp  imbalance_alpha.h  price_alpha.cpp  smoothed_alpha.cpp
